overflow fixed and scroll delayed

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -113,8 +113,7 @@ body {
 	font-size: 16px;
 	line-height: 1;
 	font-family: "Rubik", sans-serif;
-	width: 100vw;
-	overflow-x: hidden;
+
 }
 ol,
 ul {
